<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <Spinner
        android:id="@+id/editSpinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginBottom="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/editYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_year"
            android:inputType="number"
            android:maxLength="4"
            android:minHeight="48dp"
            android:layout_marginEnd="4dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editMonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_month"
            android:inputType="number"
            android:maxLength="2"
            android:minHeight="48dp"
            android:layout_marginStart="4dp"
            android:autofillHints="" />
    </LinearLayout>

    <EditText
        android:id="@+id/editAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_amount"
        android:inputType="number"
        android:minHeight="48dp"
        android:autofillHints="" />

</LinearLayout>